WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58393
Crash when serializing a null AttributedString
https://bugs.webkit.org/show_bug.cgi?id=58393
Summary
Crash when serializing a null AttributedString
Alexey Proskuryakov
Reported
2011-04-12 16:20:43 PDT
WebCore may refuse to provide an AttributedString (e.g. when inside a password field). Calling functions like CFStringLength on a null argument crashes.
Attachments
proposed fix
(1.61 KB, patch)
2011-04-12 16:22 PDT
,
Alexey Proskuryakov
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-04-12 16:20:58 PDT
<
rdar://problem/9275326
>
Alexey Proskuryakov
Comment 2
2011-04-12 16:22:46 PDT
Created
attachment 89301
[details]
proposed fix
Alexey Proskuryakov
Comment 3
2011-04-12 16:34:31 PDT
Committed <
http://trac.webkit.org/changeset/83662
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug