        Reviewed by Oliver Hunt.

Crash when serializing a null AttributedString
        https://bugs.webkit.org/show_bug.cgi?id=58393
        <rdar://problem/9275326>

        * Shared/mac/AttributedString.mm:
        (WebKit::AttributedString::encode):
        (WebKit::AttributedString::decode):
        Prefix the serialized value with an isNull tag.



git-svn-id: svn://svn.chromium.org/blink/trunk@83662 bbb929c8-8fbe-4397-9dbb-9b2b20218538